--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
                 <div class="row form-content">
                     <div class="col-12">
                         <div class="step-title">
-                            <h2 class="featured">Sign in to ToDos</h2>
+                            <h2 class="featured">Sign in to ToDoz</h2>
                             <p>Please Enter your data.</p>
                         </div>
                         <div class="Error" *ngIf="error">
@@ -36,7 +36,7 @@
                             <input type="submit" value="login" class="form-control field-submit"
                                 (click)="login(loginForm)">
                         </form>
-                        <p class="loginNavigator">New to ToDos? <a (click)="navigateToRegister()">Create an account</a></p>
+                        <p class="loginNavigator">New to ToDoz? <a (click)="navigateToRegister()">Create an account</a></p>
                     </div>
                 </div>
             </div>
