--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -7,7 +7,7 @@
                 <div class="row form-content">
                     <div class="col-12">
                         <div class="step-title">
-                            <h2 class="featured">Join ToDos</h2>
+                            <h2 class="featured">Join ToDoz</h2>
                             <p>Create your account</p>
                         </div>
                         <div class="Error" *ngIf="error">
