--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,9 @@
-<nav class="navbar navbar-expand-sm navbar-dark">
+<nav class="navbar navbar-expand-sm">
     <div class="container-fluid">
-        <ul class="row navbar-nav d-flex align-content-between">
-            <li class="nav-item col-4">
-                <a routerLink="" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item col-4">
-                <a routerLink="" class="nav-link" > ToDos</a>
-            </li>
-            <li class="nav-item col-4">
-                <a routerLink="" class="nav-link" >About</a>
-            </li>
+        <ul class="row navbar-nav d-flex">
+            <div class="profile">
+                ToDoz
+            </div>
         </ul>
     </div>
 </nav>
