--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <ul class="row navbar-nav d-flex">
             <div class="profile">
-                ToDoz
+                <a href="mailto:somayaelbaradey@gmail.com">ToDoz</a>
             </div>
         </ul>
     </div>
