--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -237,7 +237,7 @@
                         <input type="text" name="title" class="form-control field-title" placeholder="Title">
                         <textarea name="body" class="form-control field-body" placeholder="Task Details"></textarea>
                         <select name="status" class="form-control">
-                            <option selected value="" disabled="disabled">Status</option>
+                            <option selected value="to-do" disabled="disabled">Status</option>
                             <option value="to-do">To Do</option>
                             <option value="in-progress">In Progress</option>
                             <option value="done">Done</option>
