--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,6 +3,8 @@
         <ul class="row navbar-nav d-flex">
             <div class="profile">
                 <a href="mailto:somayaelbaradey@gmail.com">ToDoz</a>
+                <a class="nav-link align-items-center"><img style="padding-left: 7px;"
+                    src={{logout}} (click)="logout()"></a>
             </div>
         </ul>
     </div>
