--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
             <div class="profile">
                 <a href="mailto:somayaelbaradey@gmail.com">ToDoz</a>
                 <a class="nav-link align-items-center"><img style="padding-left: 7px;"
-                    src={{logout}} (click)="logout()"></a>
+                    src={{logout}} (click)="logOut()"></a>
             </div>
         </ul>
     </div>
