--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,8 +2,7 @@
     <div class="container-fluid">
         <ul class="row navbar-nav d-flex">
             <div class="profile">
-                <a href="mailto:somayaelbaradey@gmail.com">ToDoz</a>
-                <a class="nav-link align-items-center"><img style="padding-left: 7px;"
+                <a href="mailto:somayaelbaradey@gmail.com">ToDoz<img style="padding-left: 5px;"
                     src={{logout}} (click)="logOut()"></a>
             </div>
         </ul>
