feat: Reset Password

--- a/src/app/components/resetpassword/resetpassword.component.html
+++ b/src/app/components/resetpassword/resetpassword.component.html
@@ -7,10 +7,8 @@
                 <div class="row form-content">
                     <div class="col-12">
                         <div class="step-title">
-                            <h2 class="featured">Sign in to ToDoz</h2>
+                            <h2 class="featured">Reset Todoz Password</h2>
                         </div>
-                        <p class="loginNavigator">New to ToDoz? <a (click)="navigateToRegister()">Create an account</a>
-                        </p>
                         <div class="Error" *ngIf="error">
                             {{error}}
                         </div>
@@ -29,27 +27,27 @@
                                 </span>
                             </span>
                             <input type="password" formControlName='password' name="password"
-                                class="form-control field-password" placeholder="Password">
+                                class="form-control field-password" placeholder="New Password">
                             <span *ngIf="!validForm && myForm.controls.password.invalid ">
                                 <span *ngIf="myForm.controls.password.errors.required" class="invalid"> Password is
                                     required.</span>
+                                <span *ngIf="myForm.controls.password.errors.pattern" class="invalid"> Your password
+                                    must have at least 1 upper case letter, 1 special character, 1 small case
+                                    letter.</span>
                             </span>
-                            <div class="text-left ml-5">
-                                <p style="font-size: 15px;" class="loginNavigator"><a (click)="navigateToReset()">Forgot
-                                        password? </a></p>
-                            </div>
-                            <input type="submit" value="login" class="form-control field-submit"
+                            <input type="submit" value="Submit" class="form-control field-submit"
                                 (click)="login(loginForm)">
                         </form>
+                        <p class="loginNavigator">Back to login? <a (click)="navigateToRegister()">Login</a>
+                        </p>
                     </div>
                 </div>
             </div>
 
-            <!-- login image -->
             <div class="content-images col-12 col-md-6 pl-md-5 d-none d-md-block">
                 <div class="gallery">
                     <div class="mask-radius"></div>
-                    <img src={{image}} class="fit-image" alt="register Image">
+                    <img src={{image}} class="fit-image">
                 </div>
             </div>
         </div>
