--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,11 @@
 <nav class="navbar navbar-expand-sm">
-    <div class="container-fluid">
-        <ul class="row navbar-nav d-flex">
-            <div class="profile">
-                <a>ToDoz<img style="padding-left: 5px;"
+    <div class="row navbar-nav container-fluid">
+            <div class="col-6 profile text-right">
+                <a>ToDoz</a>
+            </div>
+            <div class="col-6 profile text-right">
+                <a style="font-size: 21px;"><img style="padding-left: 5px;"
                     src={{logout}} (click)="logOut()"></a>
             </div>
-        </ul>
     </div>
 </nav>
